src/objects/Review_Completion_Time_Computation__c.object
<CustomObject>
    <description>Hold data to compute the expected review completion time for plan reviews</description>
    <fields>
        <fullName>Answer_Comparison_Type__c</fullName>
        <description>Added the range comparison type to accommodate answer comparison for gpd</description>
        <label>Answer Comparison Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Answer__c</fullName>
        <description>Expected Answer for the external question id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External Id</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_id_of_Question__c</fullName>
        <description>Hold external ID to match question with answer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External id of Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range_End_Value__c</fullName>
        <description>to store end value of the range. such as 1000-3000 gpd (used in answertriggerahndler and review_completion_time_computation__c object)</description>
        <label>Range End Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Range_Start_Value__c</fullName>
        <description>to store start value of the range. such as 1000-3000 gpd (used in answertriggerahndler and review_completion_time_computation__c object)</description>
        <label>Range Start Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Hours__c</fullName>
        <description>Hours required to review as per the expected answer</description>
        <label>Review Hours</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Review Completion Time Computation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Expected_Answer__c</columns>
        <columns>External_id_of_Question__c</columns>
        <columns>Review_Hours__c</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Review Completion Time Computation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Review Completion Time Computation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>